--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  geolocator: ^6.1.13
+  http: ^0.12.2
+  google_fonts: ^1.1.2
+  flutter_svg: ^0.19.3
+  timer_builder: ^1.3.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
